[package]
name = "minecraft-shawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
craftping = { version = "0.5.0", features = ["async-tokio"] }
env_logger = "0.11.3"
futures-lite = "2.3.0"
gethostname = "0.4.3"
lapin = "2.3.1"
log = "0.4.21"
pin-utils = "0.1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-scoped = "0.2.0"
