[package]
name = "shawl-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "shawl_common"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
craftping = "0.5.0"
serde = { version = "1.0.202", features = ["derive"] } 
