[package]
name = "shawl-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.shawl-common]
path = "../shawl-common"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
gethostname = "0.4.3"
lapin = "2.3.1"
chrono = "0.4.38"
tokio = { version = "1.36.0", features = ["full"] }
tokio-scoped = "0.2.0"
futures-lite = "2.3.0"
ipnet = "2.9.0"
futures-util = "0.3.30"
craftping = { version = "0.5.0", features = ["async-tokio"] }